--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/ichigo pfp.jpg" alt="">
+        <img src="images/ichigo-pfp.jpg" alt="">
         <h3>Ahmed Abdellatif Abdelali</h3>
         <p class="location">Naama, Algeria</p>
         <p class="overview">"Front-end developer"</p>
